diesel_compile_tests/tests/fail/array_only_usable_with_pg.stderr
error[E0271]: type mismatch resolving `<SqliteConnection as Connection>::Backend == Pg`
 --> tests/fail/array_only_usable_with_pg.rs:8:48
  |
8 |     select(array((1,))).get_result::<Vec<i32>>(&mut connection);
  |                         ----------             ^^^^^^^^^^^^^^^ expected struct `Pg`, found struct `Sqlite`
  |                         |
  |                         required by a bound introduced by this call
  |
  = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>,), Integer>>>` to implement `LoadQuery<'_, diesel::SqliteConnection, Vec<i32>>`
note: required by a bound in `get_result`
 --> $DIESEL/src/query_dsl/mod.rs
  |
  |         Self: LoadQuery<'query, Conn, U>,
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`

error[E0271]: type mismatch resolving `<MysqlConnection as Connection>::Backend == Pg`
  --> tests/fail/array_only_usable_with_pg.rs:11:48
   |
11 |     select(array((1,))).get_result::<Vec<i32>>(&mut connection);
   |                         ----------             ^^^^^^^^^^^^^^^ expected struct `Pg`, found struct `Mysql`
   |                         |
   |                         required by a bound introduced by this call
   |
   = note: required for `SelectStatement<NoFromClause, SelectClause<ArrayLiteral<(Bound<Integer, i32>,), Integer>>>` to implement `LoadQuery<'_, diesel::MysqlConnection, Vec<i32>>`
note: required by a bound in `get_result`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
